--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@supabase/supabase-js": "^2.94.0",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-query": "^5.90.20",
+    "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^24.10.1",
     "@types/qrcode.react": "^1.0.5",
     "@types/react": "^19.2.5",
