--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "qrcode.react": "^4.2.0",
     "radix-ui": "^1.4.3",
     "react": "^19.2.0",
+    "react-day-picker": "^9.13.1",
     "react-dom": "^19.2.0",
     "react-easy-crop": "^5.5.6",
     "react-hook-form": "^7.71.1",
